--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Newsletter Signup - The Code Review</title>
 </head>
+
 <body>
     <div class="tip-top">
         <h1>THE CODE REVIEW</h1>
@@ -23,63 +24,91 @@
     </header>
 
     <main>
-        <div class="main-container">
-            <form action="#" method="post">
-                <fieldset>
-                    <legend>Contact Information</legend>
+        <!-- <div class="container"> -->
+            <div class="main-container">
+                <form action="#" method="post" id="form1">
+                    <fieldset>
+                        <legend>Contact Information</legend>
 
-                    <p>
-                        <label for="name">Full Name</label>
-                        <input type="text" id="name" name="user_name">
-                    </p>
+                        <p>
+                            <label for="name">Full Name</label>
+                            <input type="text" id="name" name="user_name" placeholder="Required">
+                        </p>
 
-                    <p>
-                        <label for="email">Email Address</label>
-                        <input type="email" id="email" name="user_email">
-                    </p>
+                        <p>
+                            <label for="email">Email Address</label>
+                            <input type="email" id="email" name="user_email" placeholder="Required">
+                        </p>
 
-                    <p>
-                        <label for="phone">Email Address</label>
-                        <input type="tel" id="phone" name="user_phone">  
-                    </p>
-                    
-                    <p>
-                        <label for="address">Street Address</label>
-                        <input type="text" id="address" name="user_address">
-                    </p>    
+                        <p>
+                            <label for="phone">Phone Number</label>
+                            <input type="tel" id="phone" name="user_phone">  
+                        </p>
+                        
+                        <p>
+                            <label for="address">Street Address</label>
+                            <input type="text" id="address" name="user_address">
+                        </p>    
 
-                    <p>
-                        <label for="city">City</label>
-                        <input type="text" id="city" name="user_city">    
-                    </p>
+                        <p>
+                            <label for="city">City</label>
+                            <input type="text" id="city" name="user_city">    
+                        </p>
 
-                    <p>
-                        <label for="state">State</label>
-                        <select id="state" name="user_state" placeholder="Choose State">
-                            <option value="" selected class="state-default">Choose State</option>
-                            <option value="al">AL</option>
-                            <option value="tn">TN</option>
-                            <option value="ga">GA</option>
-                            <option value="sc">SC</option>
-                            <option value="nc">NC</option>
-                        </select>
-                    </p>
+                        <p>
+                            <label for="state">State</label>
+                            <select id="state" name="user_state" placeholder="Choose State">
+                                <option value="" selected class="state-default">Choose State</option>
+                                <option value="al">AL</option>
+                                <option value="tn">TN</option>
+                                <option value="ga">GA</option>
+                                <option value="sc">SC</option>
+                                <option value="nc">NC</option>
+                            </select>
+                        </p>
 
-                    <p>
-                        <label for="zip">Zip Code</label>
-                        <input type="number" id="zip" name="user_zip">
-                    </p>
-                    <hr>
-                </fieldset>
+                        <p>
+                            <label for="zip">Zip Code</label>
+                            <input type="number" id="zip" name="user_zip">
+                        </p>
+                        <hr>
+                    </fieldset>
 
-                <fieldset>
-                    <legend>Newsletter</legend>
-                    <p>Select the newsletters you would like to receive</p>
-                    <input type="checkbox" id="html_news" value="html_news" name="newsletter_selection"><label for="html_news">HTML News</label>
-                    <input type="checkbox" id="html_news" value="html_news" name="newsletter_selection"><label for="html_news">HTML News</label>
-                </fieldset>
-            </form>
+                    <fieldset>
+                        <legend>Newsletter</legend>
+                        <p>Select the newsletters you would like to receive</p>
+                        <div>
+                            <input type="checkbox" id="html_news" value="html_news" name="newsletter_selection"><span class="inliners"><label for="html_news">HTML News</label></span>
+                        </div>
+
+                        <div>
+                            <input type="checkbox" id="css_news" value="css_news" name="newsletter_selection"><span class="inliners"><label for="css_news">CSS News</label></span>
+                        </div> 
+
+                        <div>   
+                            <input type="checkbox" id="js_news" value="js_news" name="newsletter_selection"><span class="inliners"><label for="js_news">JavaScript News</label></span>
+                        </div>
+
+                        <p>Newsletter format</p>
+
+                        <div>
+                            <input type="radio" id="html" value="html" name="format_selection"><span class="inliners"><label for="html">HTML</label></span>
+                        </div>
+
+                        <div>
+                            <input type="radio" id="plain-text" value="plain_text" name="format_selection"><span class="inliners"><label for="plain-text">Plain text</label></span>
+                        </div>
+
+                        <label for="other-topics">Other topics you'd like to hear about</label>
+                        <textarea></textarea>
+
+                        <button type="submit" form="form1">Sign Up</button>
+                        <p>Copyright the Code Review</p>
+                    </fieldset>
+                </form>
+            </div>
         </div>
     </main> 
+
 </body>
 </html>
