--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="top-container">
             <h2>Signup for our newsletter</h2>
             <p>Get the latest news on how your code is doing right in your inbox.</p>
-            <hr>
+            <hr class="hr-1">
         </div>
     </header>
 
@@ -66,11 +66,11 @@
                         </select>
                     </p>
 
-                    <p>
+                    <p class="zip-graph">
                         <label for="zip">Zip Code</label>
                         <input type="text" id="zip" name="user_zip">
                     </p>
-                    <hr>
+                    <hr class="hr-2">
                 </fieldset>
         </div>
         <div class="main-container clearfix">
@@ -103,7 +103,9 @@
                     <textarea></textarea>
 
                     <button type="submit" form="form1">Sign Up</button>
-                    <p>Copyright the Code Review</p>
+                    <div class="copyright">
+                        <p>Copyright the Code Review</p>
+                    </div>
                 </fieldset>
         </div>
             </form>
