fixed html validation errors

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <p>
                         <label for="state">State</label>
-                        <select id="state" name="user_state" placeholder="Choose State">
+                        <select id="state" name="user_state">
                             <option value="" selected class="state-default">Choose State</option>
                             <option value="al">AL</option>
                             <option value="tn">TN</option>
@@ -72,8 +72,7 @@
                     </p>
                     <hr class="hr-2">
                 </fieldset>
-        </div>
-        <div class="main-container clearfix">
+
                 <fieldset>
                     <legend>Newsletter</legend>
                     <p>Select the newsletters you would like to receive</p>
@@ -100,14 +99,13 @@
                     </div>
 
                     <label for="other-topics">Other topics you'd like to hear about</label>
-                    <textarea></textarea>
+                    <textarea id="other-topics"></textarea>
 
                     <button type="submit" form="form1">Sign Up</button>
                     <div class="copyright">
                         <p>Copyright the Code Review</p>
                     </div>
                 </fieldset>
-        </div>
             </form>
         </div>
     </main> 
