fixed two tiny mistakes

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
 
                     <label for="other-topics">Other topics you'd like to hear about</label>
-                    <textarea id="other-topics"></textarea>
+                    <textarea id="other-topics" name="user_other_topics"></textarea>
 
                     <button type="submit" form="form1">Sign Up</button>
                     <div class="copyright">
